--- a/Clients/SampleSolution.Web/package.json
+++ b/Clients/SampleSolution.Web/package.json
@@ -7,80 +7,66 @@
   "browserify-shim": {},
   "dependencies": {
     "@labeg/alertify.js": "=2.0.42",
-    "@labeg/webapp-core": "=0.1.59",
-    "@material-ui/core": "=4.11.0",
-    "@material-ui/icons": "=4.9.1",
-    "abortcontroller-polyfill": "=1.4.0",
+    "@labeg/webapp-core": "=0.1.61",
+    "@material-ui/core": "=4.11.2",
+    "@material-ui/icons": "=4.11.2",
+    "abortcontroller-polyfill": "=1.5.0",
     "class-validator": "=0.12.2",
     "classnames": "=2.2.6",
-    "core-js": "=3.6.5",
-    "first-di": "=0.1.25",
+    "core-js": "=3.8.1",
+    "first-di": "=0.1.29",
     "gridlex": "=2.7.1",
     "imask": "=6.0.5",
-    "react": "=16.13.1",
-    "react-dom": "=16.13.1",
+    "react": "=17.0.1",
+    "react-dom": "=17.0.1",
     "react-router-dom": "=5.2.0",
-    "react-virtualized": "=9.21.2",
-    "ts-serializable": "=2.0.20",
-    "tslib": "=2.0.0",
-    "whatwg-fetch": "=3.2.0"
+    "react-virtualized": "=9.22.3",
+    "ts-serializable": "=2.0.25",
+    "tslib": "=2.0.3",
+    "whatwg-fetch": "=3.5.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-arrow-functions": "=7.10.4",
-    "@babel/plugin-transform-async-to-generator": "=7.10.4",
-    "@babel/plugin-transform-block-scoping": "=7.10.5",
-    "@babel/plugin-transform-classes": "=7.10.4",
-    "@babel/plugin-transform-destructuring": "=7.10.4",
-    "@babel/plugin-transform-for-of": "=7.10.4",
-    "@babel/plugin-transform-parameters": "=7.10.5",
-    "@babel/plugin-transform-regenerator": "=7.10.4",
-    "@babel/plugin-transform-runtime": "=7.10.5",
-    "@babel/plugin-transform-shorthand-properties": "=7.10.4",
-    "@babel/plugin-transform-spread": "=7.10.4",
-    "@babel/plugin-transform-template-literals": "=7.10.5",
-    "@babel/plugin-transform-unicode-regex": "=7.10.4",
-    "@babel/runtime": "=7.10.5",
     "@csstools/postcss-sass": "=4.0.0",
-    "@labeg/code-style": "=1.0.75",
-    "@types/chai": "=4.2.12",
-    "@types/classnames": "=2.2.10",
-    "@types/core-js": "=2.5.3",
-    "@types/faker": "=4.1.12",
-    "@types/mocha": "=8.0.0",
-    "@types/react": "=16.9.43",
-    "@types/react-dom": "=16.9.8",
-    "@types/react-router-dom": "=5.1.5",
-    "autoprefixer": "=9.8.5",
-    "browser-sync": "=2.26.10",
+    "@labeg/code-style": "=1.0.82",
+    "@rollup/plugin-babel": "=5.2.2",
+    "@rollup/plugin-commonjs": "=17.0.0",
+    "@rollup/plugin-node-resolve": "=11.0.1",
+    "@types/chai": "=4.2.14",
+    "@types/classnames": "=2.2.11",
+    "@types/core-js": "=2.5.4",
+    "@types/faker": "=5.1.5",
+    "@types/mocha": "=8.2.0",
+    "@types/react": "=17.0.0",
+    "@types/react-dom": "=17.0.0",
+    "@types/react-router-dom": "=5.1.6",
+    "autoprefixer": "=9.8.6",
+    "browser-sync": "=2.26.13",
     "chai": "=4.2.0",
-    "concurrently": "=5.2.0",
+    "concurrently": "=5.3.0",
     "connect-history-api-fallback": "=1.6.0",
-    "copyfiles": "=2.3.0",
+    "copyfiles": "=2.4.1",
     "cssnano": "=4.1.10",
+    "faker": "=5.1.0",
     "html-minifier": "=4.0.0",
-    "http-proxy-middleware": "=1.0.5",
-    "husky": "=4.2.5",
-    "faker": "=4.1.0",
-    "lint-staged": "=10.2.11",
-    "mocha": "=8.0.1",
-    "node-sass": "=4.14.1",
-    "postcss-cli": "=7.1.1",
-    "postcss-scss": "=2.1.1",
+    "http-proxy-middleware": "=1.0.6",
+    "husky": "=4.3.6",
+    "lint-staged": "=10.5.3",
+    "mocha": "=8.2.1",
+    "node-sass": "=5.0.0",
+    "postcss": "=8.2.1",
+    "postcss-cli": "=8.3.1",
+    "postcss-scss": "=3.0.4",
     "replace-in-file": "=6.1.0",
-    "rollup": "=2.23.0",
-    "rollup-plugin-babel": "=4.4.0",
-    "@rollup/plugin-commonjs": "=13.0.0",
-    "@rollup/plugin-node-resolve": "=8.4.0",
+    "rollup": "=2.35.1",
     "rollup-plugin-replace": "=2.2.0",
     "rollup-plugin-string": "=3.0.0",
-    "rollup-plugin-terser": "=6.1.0",
-    "rollup-plugin-visualizer": "=4.0.4",
-    "selenium-webdriver": "=4.0.0-alpha.7",
-    "semver": "=7.3.2",
-    "sharp": "=0.25.4",
+    "rollup-plugin-terser": "=7.0.2",
+    "rollup-plugin-visualizer": "=4.2.0",
+    "semver": "=7.3.4",
+    "sharp": "=0.27.0",
     "stylelint-scss": "=3.18.0",
-    "ts-node": "=8.10.2",
-    "typescript": "=3.9.7"
+    "ts-node": "=9.1.1",
+    "typescript": "=4.1.3"
   },
   "scripts": {
     "packages:manupdate": "rm -rvf node_modules && npm install",
@@ -93,33 +79,33 @@
     "serve:browser-sync": "browser-sync start --config bs-config.js",
     "serve:styles": "postcss ./wwwrootsrc/**/*.scss --watch --base ./wwwrootsrc/ --dir ./wwwroot.tmp/",
     "serve:scripts": "tsc --project tsconfig.json --watch --preserveWatchOutput",
-    "serve:bundle_landing_es2015": "rollup --config --watch --environment NODE_ENV:development,APP:Landing_es2015",
+    "serve:bundle_landing_es2020": "rollup --config --watch --environment NODE_ENV:development,APP:Landing_es2020",
     "serve:bundle_landing_es5": "rollup --config --watch --environment NODE_ENV:development,APP:Landing_es5",
-    "serve:bundle_cabinete_es2015": "rollup --config --watch --environment NODE_ENV:development,APP:Cabinet_es2015",
+    "serve:bundle_cabinete_es2020": "rollup --config --watch --environment NODE_ENV:development,APP:Cabinet_es2020",
     "serve:bundle_cabinete_es5": "rollup --config --watch --environment NODE_ENV:development,APP:Cabinet_es5",
-    "serve:bundle_admin_es2015": "rollup --config --watch --environment NODE_ENV:development,APP:Admin_es2015",
+    "serve:bundle_admin_es2020": "rollup --config --watch --environment NODE_ENV:development,APP:Admin_es2020",
     "serve:bundle_admin_es5": "rollup --config --watch --environment NODE_ENV:development,APP:Admin_es5",
-    "serve:bundle_login_es2015": "rollup --config --watch --environment NODE_ENV:development,APP:Login_es2015",
+    "serve:bundle_login_es2020": "rollup --config --watch --environment NODE_ENV:development,APP:Login_es2020",
     "serve:bundle_login_es5": "rollup --config --watch --environment NODE_ENV:development,APP:Login_es5",
-    "serve:bundle_polyfills_es2015": "rollup --config --watch --environment NODE_ENV:development,APP:Polyfills_es2015",
+    "serve:bundle_polyfills_es2020": "rollup --config --watch --environment NODE_ENV:development,APP:Polyfills_es2020",
     "serve:bundle_polyfills_es5": "rollup --config --watch --environment NODE_ENV:development,APP:Polyfills_es5",
-    "serve": "concurrently \"npm run build:styles\" \"npm run build:scripts\" && concurrently --kill-others \"npm run serve:browser-sync\" \"npm run serve:styles\" \"npm run serve:scripts\" \"npm run serve:bundle_landing_es2015\"  \"npm run serve:bundle_landing_es5\" \"npm run serve:bundle_polyfills_es2015\" \"npm run serve:bundle_polyfills_es5\" \"npm run serve:bundle_cabinete_es2015\" \"npm run serve:bundle_cabinete_es5\" \"npm run serve:bundle_admin_es2015\" \"npm run serve:bundle_admin_es5\" \"npm run serve:bundle_login_es2015\" \"npm run serve:bundle_login_es5\"",
+    "serve": "concurrently \"npm run build:styles\" \"npm run build:scripts\" && concurrently --kill-others \"npm run serve:browser-sync\" \"npm run serve:styles\" \"npm run serve:scripts\" \"npm run serve:bundle_landing_es2020\"  \"npm run serve:bundle_landing_es5\" \"npm run serve:bundle_polyfills_es2020\" \"npm run serve:bundle_polyfills_es5\" \"npm run serve:bundle_cabinete_es2020\" \"npm run serve:bundle_cabinete_es5\" \"npm run serve:bundle_admin_es2020\" \"npm run serve:bundle_admin_es5\" \"npm run serve:bundle_login_es2020\" \"npm run serve:bundle_login_es5\"",
     "build:static": "copyfiles -u 1 ./wwwrootsrc/**/*.{ico,svg,eot,ttf,woff,woff2,pdf,gif,webmanifest} ./wwwroot/",
     "build:images": "node ./buildscripts/min-images.js",
     "build:html": "html-minifier --input-dir ./wwwrootsrc/ --output-dir ./wwwroot/ --file-ext html --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --use-short-doctype --minify-css true --minify-js true && node ./buildscripts/set-html-timestmap.js",
     "build:styles": "postcss ./wwwrootsrc/**/*.scss --base ./wwwrootsrc/ --dir ./wwwroot.tmp/",
     "build:scripts": "tsc --project tsconfig.json",
-    "build:bundle_landing_es2015": "rollup --config --environment NODE_ENV:production,APP:Landing_es2015",
+    "build:bundle_landing_es2020": "rollup --config --environment NODE_ENV:production,APP:Landing_es2020",
     "build:bundle_landing_es5": "rollup --config --environment NODE_ENV:production,APP:Landing_es5",
-    "build:bundle_cabinete_es2015": "rollup --config --environment NODE_ENV:production,APP:Cabinet_es2015",
+    "build:bundle_cabinete_es2020": "rollup --config --environment NODE_ENV:production,APP:Cabinet_es2020",
     "build:bundle_cabinete_es5": "rollup --config --environment NODE_ENV:production,APP:Cabinet_es5",
-    "build:bundle_admin_es2015": "rollup --config --environment NODE_ENV:production,APP:Admin_es2015",
+    "build:bundle_admin_es2020": "rollup --config --environment NODE_ENV:production,APP:Admin_es2020",
     "build:bundle_admin_es5": "rollup --config --environment NODE_ENV:production,APP:Admin_es5",
-    "build:bundle_login_es2015": "rollup --config --environment NODE_ENV:production,APP:Login_es2015",
+    "build:bundle_login_es2020": "rollup --config --environment NODE_ENV:production,APP:Login_es2020",
     "build:bundle_login_es5": "rollup --config --environment NODE_ENV:production,APP:Login_es5",
-    "build:bundle_polyfills_es2015": "rollup --config --environment NODE_ENV:production,APP:Polyfills_es2015",
+    "build:bundle_polyfills_es2020": "rollup --config --environment NODE_ENV:production,APP:Polyfills_es2020",
     "build:bundle_polyfills_es5": "rollup --config --environment NODE_ENV:production,APP:Polyfills_es5",
-    "build": "rm -rvf wwwroot/ && rm -rvf wwwroot.tmp/ && concurrently \"npm run build:styles\" \"npm run build:scripts\" && concurrently \"npm run build:static\" \"npm run build:images\" \"npm run build:html\" \"npm run build:bundle_landing_es2015\" \"npm run build:bundle_landing_es5\" \"npm run build:bundle_polyfills_es2015\" \"npm run build:bundle_polyfills_es5\" \"npm run build:bundle_cabinete_es2015\" \"npm run build:bundle_cabinete_es5\" \"npm run build:bundle_admin_es2015\" \"npm run build:bundle_admin_es5\" \"npm run build:bundle_login_es2015\" \"npm run build:bundle_login_es5\"",
+    "build": "rm -rvf wwwroot/ && rm -rvf wwwroot.tmp/ && concurrently \"npm run build:styles\" \"npm run build:scripts\" && concurrently \"npm run build:static\" \"npm run build:images\" \"npm run build:html\" \"npm run build:bundle_landing_es2020\" \"npm run build:bundle_landing_es5\" \"npm run build:bundle_polyfills_es2020\" \"npm run build:bundle_polyfills_es5\" \"npm run build:bundle_cabinete_es2020\" \"npm run build:bundle_cabinete_es5\" \"npm run build:bundle_admin_es2020\" \"npm run build:bundle_admin_es5\" \"npm run build:bundle_login_es2020\" \"npm run build:bundle_login_es5\"",
     "postinstall": "npm dedupe && npm prune && npm run fix:lpn",
     "fix:lpn": "node ./buildscripts/make-noob-libphonenumber.js"
   },
