--- a/Clients/SampleSolution.Web/tsconfig.json
+++ b/Clients/SampleSolution.Web/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2015",
+    "target": "ES2020",
     "module": "ESNext",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
@@ -13,7 +13,7 @@
     "experimentalDecorators": true,
     "jsx": "react",
     "lib": [
-      "ES2015",
+      "ES2020",
       "DOM",
       "DOM.Iterable",
       "ScriptHost"
